<resources>
    <string name="app_name">Tax App</string>
    <string name="main_activity_title">Tax App</string>
    <string name="mobile_no">Mobile no.</string>
    <string name="email_id">Email Id</string>
    <string name="update">UPDATE</string>
    <string name="change_language">Change Language</string>
    <string name="electricity_bill">Electricity Bill</string>
    <string name="water_bill">Water Bill</string>
    <string name="property_tax">Property Tax</string>
    <string name="dth">DTH</string>
    <string name="grievance">Grievance</string>
    <string name="check_dues">Check dues</string>
    <string name="internet">INTERNET</string>
    <string name="landline">Landline</string>
    <string name="bookings">Bookings</string>
    <string name="emergency">Emergency</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="confirm">CONFIRM</string>
    <string name="wait_for_the_code">Wait for the Code...</string>
    <string name="i_sent_you_a_code_it_will_be_detected_automatically">I sent you a code it will be detected automatically</string>
    <string name="enter_code">Enter code....</string>
    <string name="sign_in">Sign in</string>
    <string name="electricity_bill_payment">Electricity Bill Payment</string>
    <string name="you_can_now_pay_your_electricity_bills_online_here_you_can_pay_bills_for_tsspdcl_also_abbreviated_as_telangana_state_southern_power_distribution_company_limited">You can now pay your electricity bills online here.You can pay bills for TSSPDCL also abbreviated as Telangana State Southern Power Distribution Company Limited.</string>
    <string name="select_district">Select District</string>
    <string name="select_ero">Select ERO</string>
    <string name="sc_no">SC NO</string>
    <string name="submit">SUBMIT</string>
    <string name="water_bill_payment">Water Bill Payment</string>
    <string name="you_can_now_pay_your_water_bills_online_here_you_can_pay_bills_for_hmwssb_also_abbreviated_as_hyderabad_metropolitan_water_supply_and_sewerage_board">You can now pay your water bills online here.You can pay bills for HMWSSB also abbreviated as Hyderabad Metropolitan Water Supply and Sewerage Board.</string>
    <string name="can_number">CAN Number</string>
    <string name="property_tax_payment">Property Tax payment</string>
    <string name="you_can_now_pay_your_property_tax_online_here_you_can_be_able_to_pay_taxes_for_ghmc_it_stands_for_greater_hyderabad_municipal_corporation">You can now pay your property tax online here.You can be able to pay taxes for GHMC.It stands for Greater Hyderabad Municipal Corporation.</string>
    <string name="proceed">PROCEED</string>
    <string name="dth_recharge">DTH Recharge</string>
    <string name="the_service_will_help_you_do_an_instant_recharge_for_a_dth_connection">The service will help you do an instant recharge for a DTH connection.</string>
    <string name="recharge_amount">Recharge amount( ₹ )</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="complaint_register">Complaint Register</string>
    <string name="give_details_about_your_problem_submit_your_complaint_ghmc_will_solve_your_problem_as_soon_as_possible">GHMC will solve your problem as soon as possible.</string>
    <string name="select_category">Select Category</string>
    <string name="select_problem_type">Select problem type</string>
    <string name="enter_your_description">Enter your description</string>
    <string name="users_can_check_theirs_dues_here_and_can_proceed_throught_the_payment_process_to_clear_there_dues_we_will_provide_dues_of_property_tax_electric_bill_payments_water_bill_payments">Users can check theirs dues here and can proceed throught the payment process to clear there dues.We will provide dues of property tax,Electric Bill payments,Water Bill payments.</string>
    <string name="pti_no_sc_no_can_number">PTI No./SC NO./CAN Number</string>
    <string name="check">CHECK DUES</string>
    <string name="internet_bill_payment">Internet Bill Payment</string>
    <string name="this_service_enables_you_to_pay_your_internet_bills_online">This service enables you to pay your internet bills online</string>
    <string name="please_select_provider">Please select provider</string>
    <string name="enter_account_number">Enter Account number</string>
    <string name="disclaimer_this_service_is_available_for_the_geography_of_hyderabad_rangareddy_and_medchal">Disclaimer: This service is available for the geography of Hyderabad,Rangareddy and Medchal</string>
    <string name="landline_bill_payment">Landline Bill Payment</string>
    <string name="this_service_enables_you_to_pay_your_landline_bills_online">This service enables you to pay your landline bills online</string>
    <string name="please_select_operator">Please select operator</string>
    <string name="enter_select_a_number">Enter/select a number</string>
    <string name="amount_to_be_paid">Amount to be paid</string>
    <string name="bus_booking">Bus Booking</string>
    <string name="check_the_buses_which_are_avaliable">Check the buses which are avaliable</string>
    <string name="from">From</string>
    <string name="select_source">Select Source</string>
    <string name="to">To</string>
    <string name="select_destination">Select Destination</string>
    <string name="date">Date</string>
    <string name="set_journey_date">Set Journey date</string>
    <string name="emergency_calls">Emergency calls</string>
    <string name="click_on_button_to_make_an_emergency_call">Click on button to make an emergency call</string>
    <string name="police">POLICE</string>
    <string name="fire">FIRE</string>
    <string name="ambulance">AMBULANCE</string>
    <string name="irctc">IRCTC</string>
    <string name="child_helpline">CHILD HELPLINE</string>
    <string name="women_helpline">WOMEN HELPLINE</string>
    <string name="hyd_she_team">HYD SHE TEAM</string>
    <string name="landmark">Landmark</string>
    <string name="pti_number">PTI Number</string>
    <string name="dth_card_number">DTH card number</string>
    <string name="dthopselect">Select DTH operator</string>
    <string name="type_dues">Select type</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">settings</string>
    <string name="my_transactions">My Transactions</string>
    <string name="notifications">notifications</string>
    <string name="feedback">Feedback</string>
    <string name="info">info</string>
    <string name="logout">Logout</string>
    <string name="dear_user_you_have_done_no_transactions_yet">Dear user You have done no Transactions yet !!</string>
    <string name="no_notifications_yet">No Notifications yet !!</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="please_select_3_images">Please select 3 images</string>
    <string name="pay_now">Pay Now</string>
    <string name="book_watertanker">Book Tanker</string>
    <string name="book_water_tanker">Book Water Tanker</string>
    <string name="check_status">Check Status</string>
    <string name="book_tanker">Book Tanker</string>
    <string name="water_tankers_are_available_at_anytime">water tankers are available at anytime</string>

</resources>
