<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    android:background="@drawable/webdsign"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_weight="7"></RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.3"
        android:padding="10dp">

        <TextView
            android:id="@+id/waittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wait_for_the_code"
            android:textColor="#000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/detect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/waittext"
            android:text="@string/i_sent_you_a_code_it_will_be_detected_automatically"
            android:textColor="#646262" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextCode"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="105dp"
            android:layout_marginEnd="105dp"
            android:digits="0123456789"
            android:hint="@string/enter_code"
            android:inputType="phone"
            android:maxLength="10"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="180dp"
            android:layout_marginEnd="180dp"
            android:indeterminateTint="#000" />
    </RelativeLayout>

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
            android:id="@+id/signinbtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="135dp"
            android:layout_marginTop="-2dp"
            android:layout_marginEnd="135dp"
            android:background="@drawable/custom_button"
            android:text="@string/sign_in"
            android:textColor="#fff"
            android:textSize="18sp" />

    </RelativeLayout>

</LinearLayout>