<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="10"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Checkdues">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_weight="2"
        android:background="@drawable/dueadv">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="31dp"></RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/users_can_check_theirs_dues_here_and_can_proceed_throught_the_payment_process_to_clear_there_dues_we_will_provide_dues_of_property_tax_electric_bill_payments_water_bill_payments"
            android:textSize="18dp" />
    </RelativeLayout>

    <RelativeLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Spinner
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"></Spinner>
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/num"
            android:hint="@string/pti_no_sc_no_can_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"
            android:padding="10dp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/checkbtn"
        android:layout_width="131dp"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@drawable/custom_button"
        android:text="@string/check"
        android:textColor="#fff"
        android:textSize="18sp" />

</LinearLayout>