<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Waterbill">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="@drawable/hmwssb">
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="7.5"
        android:padding="50dp"
        android:paddingLeft="50dp"
        android:paddingTop="50dp"
        android:paddingRight="50dp"
        android:paddingBottom="50dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="384dp"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <RelativeLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/water_bill_payment"
                    android:textColor="#43327E"
                    android:textSize="24dp" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_can_now_pay_your_water_bills_online_here_you_can_pay_bills_for_hmwssb_also_abbreviated_as_hyderabad_metropolitan_water_supply_and_sewerage_board"
                android:textAlignment="center"
                android:textColor="#9E9696"
                android:textSize="17sp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/hmw"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/custom_click"
                android:padding="15dp"
                android:src="@drawable/hmwssbicon" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/can"
                    android:hint="@string/can_number"
                    android:maxLength="9"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/wbar"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/submitbtn2"
                android:layout_width="131dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_button"
                android:text="@string/submit"
                android:textColor="#fff"
                android:textSize="18sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>